--- a/src/robot_bringup/CMakeLists.txt
+++ b/src/robot_bringup/CMakeLists.txt
@@ -9,7 +9,7 @@ endif()
 find_package(ament_cmake REQUIRED)
 
 install(
-  DIRECTORY launch config worlds
+  DIRECTORY launch config worlds maps
   DESTINATION share/${PROJECT_NAME}
 )
 
